crates/math-core/src/snapshots/math_core__parser__tests__big_paren.snap
---
source: crates/math-core/src/parser.rs
expression: "\\big("
---
[
  Operator(
    op: "(",
    attrs: OpAttrs("ROLE_INFIX"),
    size: Some(Scale1),
    left: None,
    right: None,
  ),
]
