crates/math-core/src/snapshots/math_core__parser__tests__colon_fusion_in_subscript.snap
---
source: crates/math-core/src/parser.rs
expression: "x_:\\equiv, x_:="
---
[
  Sub(
    target: IdentifierChar("x", Default),
    symbol: Operator(
      op: ":",
      attrs: OpAttrs("ROLE_INFIX"),
      size: None,
      left: None,
      right: None,
    ),
  ),
  Operator(
    op: "≡",
    attrs: OpAttrs("ROLE_INFIX"),
    size: None,
    left: None,
    right: Some(Zero),
  ),
  Operator(
    op: ",",
    attrs: OpAttrs(""),
    size: None,
    left: None,
    right: None,
  ),
  Sub(
    target: IdentifierChar("x", Default),
    symbol: Operator(
      op: ":",
      attrs: OpAttrs("ROLE_INFIX"),
      size: None,
      left: None,
      right: None,
    ),
  ),
  Operator(
    op: "=",
    attrs: OpAttrs("ROLE_INFIX"),
    size: None,
    left: None,
    right: Some(Zero),
  ),
]
