crates/math-core/src/snapshots/math_core__parser__tests__colon_fusion_stop.snap
---
source: crates/math-core/src/parser.rs
expression: ":2=:="
---
[
  Operator(
    op: ":",
    attrs: OpAttrs("ROLE_INFIX"),
    size: None,
    left: Some(Zero),
    right: Some(FiveMu),
  ),
  Number("2"),
  Operator(
    op: "=",
    attrs: OpAttrs("ROLE_INFIX"),
    size: None,
    left: None,
    right: Some(Zero),
  ),
  Operator(
    op: ":",
    attrs: OpAttrs("ROLE_INFIX"),
    size: None,
    left: Some(Zero),
    right: Some(Zero),
  ),
  Operator(
    op: "=",
    attrs: OpAttrs("ROLE_INFIX"),
    size: None,
    left: Some(Zero),
    right: Some(Zero),
  ),
]
