crates/math-core/src/snapshots/math_core__parser__tests__mathit_of_max.snap
---
source: crates/math-core/src/parser.rs
expression: "\\mathit{ab \\max \\alpha\\beta}"
---
[
  Row(
    nodes: [
      IdentifierStr("𝑎𝑏"),
      Operator(
        op: "\u{2062}",
        attrs: OpAttrs("ROLE_INFIX"),
        size: None,
        left: Some(ThreeMu),
        right: None,
      ),
      Row(
        nodes: [
          IdentifierStr("max"),
          Operator(
            op: "\u{2061}",
            attrs: OpAttrs("ROLE_INFIX"),
            size: None,
            left: Some(ThreeMu),
            right: None,
          ),
          IdentifierStr("𝛼𝛽"),
        ],
        attrs: RowAttrs(
          color: None,
          style: None,
          math_shift_compact: false,
        ),
      ),
    ],
    attrs: RowAttrs(
      color: None,
      style: None,
      math_shift_compact: false,
    ),
  ),
]
