crates/math-core/src/snapshots/math_core__parser__tests__number_after_lim.snap
---
source: crates/math-core/src/parser.rs
expression: "\\sum\\limits_12"
---
[
  Under(
    symbol: Number("1"),
    target: Operator(
      op: "∑",
      attrs: OpAttrs("NO_MOVABLE_LIMITS | ROLE_PREFIX"),
      size: None,
      left: Some(Zero),
      right: None,
    ),
  ),
  Number("2"),
]
